# generated by datamodel-codegen:
#   filename:  telemetry/device.json

from __future__ import annotations

from typing import Literal, Optional

from pydantic import Extra, Field, StrictStr

from ..entity import Entity, Property


class Name(Property):
    """
    Property. Name of the network device.
    """

    class Config:
        validate_assignment = True

    value: StrictStr


class SoftwareVersion(Property):
    """
    Property. Software version of the network device.
    """

    class Config:
        validate_assignment = True
        extra = Extra.forbid
        allow_population_by_field_name = True

    value: StrictStr


class Vendor(Property):
    """
    Property. Vendor of the network device.
    """

    class Config:
        validate_assignment = True
        extra = Extra.forbid
        allow_population_by_field_name = True

    value: StrictStr


class Device(Entity):
    """
    Entity that represents a model-based network device
    """

    class Config:
        validate_assignment = True
        extra = Extra.forbid
        allow_population_by_field_name = True

    type: Optional[Literal['Device']] = Field(
        'Device', description='NGSI-LD Entity identifier. It has to be Device'
    )
    name: Name
    software_version: SoftwareVersion = Field(..., alias='softwareVersion')
    vendor: Vendor
